<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.16">
  <POU Name="RunAxisAoiView" Id="{dd3c82d7-e0e7-490b-93f3-e200f9619a5e}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK RunAxisAoiView EXTENDS RunAxisInspection
VAR
	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[SUPER^();

CASE outputState OF
	eSpecialStates.SLAVE_ENTER_PROCEDURE:
		IF bMaterialOverride THEN
			bSerialTransition := TRUE;
		ELSE
			NextState := eSpecialStates.SLAVE_WORK_DONE;
		END_IF
	16#201:
		//align
		IF sideAligner^.Execute(argCommand:= eCylinderCommands.COMMAND_B) THEN
			NextState := eSpecialStates.SLAVE_AXIS_INSPECTION_ENTER;
		END_IF
	//----------------------------------
	eSpecialStates.SLAVE_AXIS_INSPECTION_EXIT:
		//release
		IF NOT transitionByte.0 AND_THEN axis1^.ExecuteParameterIndex(indexStandByAxis1) THEN
			transitionByte.0 := TRUE;
		END_IF
		IF NOT transitionByte.1 AND_THEN (axis2 = 0 OR axis2<>0 AND_THEN axis2^.ExecuteParameterIndex(indexStandByAxis2)) THEN
			transitionByte.1 := TRUE; //axis 2 is not existed
		END_IF	
		IF NOT transitionByte.2 AND_THEN sideAligner^.Execute(eCylinderCommands.COMMAND_A) THEN
			transitionByte.2 := TRUE;
		END_IF
		IF transitionByte = 7 THEN
			NextState := eSpecialStates.SLAVE_WORK_DONE;
		END_IF
END_CASE]]></ST>
    </Implementation>
    <Method Name="Initialize" Id="{11e8e337-b43d-40e3-880c-ebd377734f78}">
      <Declaration><![CDATA[METHOD Initialize : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[//default initialization sequence
CASE outputState OF 
	eSpecialStates.INITIAL_BEGIN:
		NextState := eSpecialStates.INITIAL_STATE_7;
END_CASE

Initialize := SUPER^.Initialize();]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="RunAxisAoiView">
      <LineId Id="9" Count="0" />
      <LineId Id="12" Count="0" />
      <LineId Id="11" Count="0" />
      <LineId Id="13" Count="0" />
      <LineId Id="31" Count="0" />
      <LineId Id="33" Count="0" />
      <LineId Id="35" Count="1" />
      <LineId Id="34" Count="0" />
      <LineId Id="37" Count="0" />
      <LineId Id="25" Count="0" />
      <LineId Id="15" Count="2" />
      <LineId Id="19" Count="0" />
      <LineId Id="24" Count="0" />
      <LineId Id="26" Count="0" />
      <LineId Id="43" Count="4" />
      <LineId Id="42" Count="0" />
      <LineId Id="20" Count="2" />
      <LineId Id="49" Count="2" />
      <LineId Id="14" Count="0" />
    </LineIds>
    <LineIds Name="RunAxisAoiView.Initialize">
      <LineId Id="6" Count="5" />
      <LineId Id="5" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>